<resources>
    <string name="app_name">Moru</string>
    <string name="login_acc">Login to Your\nAccount</string>
    <string name="no_acc">Don’t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="register_acc">Register New\nAccount</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="have_acc">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="register">Register</string>
    <string name="title_home">Home</string>
    <string name="title_schedule">Schedule</string>
    <string name="title_routines">Routines</string>
    <string name="title_stat">Stat</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="user">Username</string>
    <string name="example_email">example@gmail.com</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_data">Profile Data</string>
    <string name="change_password">Change Password</string>
    <string name="subscription">Subscription</string>
    <string name="logout">Logout</string>
    <string name="image_profile">image profile</string>
    <string name="add_routines">Add Routines</string>
    <string name="routine_name">Routine Name</string>
    <string name="routine_time">Routine Time</string>
    <string name="status_not_started">Not Started</string>
    <string name="status_completed">Completed</string>
    <string name="status_skipped">Skipped</string>
    <string name="category_default">Category</string>
    <string name="more_info">More Info</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet consectetur. Egestas purus volutpat varius neque eros eleifend blandit et elit. Augue mattis eget laoreet diam pretium sed gravida ut nequ</string>
    <string name="image_routine">Image Routine</string>
    <string name="to_detail_routines">To Detail Routines</string>
    <string name="good_morning">Welcome Back</string>
    <string name="waving_hand">Waving Hand</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_pick_routine">PickRoutineActivity</string>
    <string name="pick_routine">Pick Routine</string>
    <string name="search">Search</string>
    <string name="choose">Choose</string>
    <string name="exercise">Exercise</string>
    <string name="read">Read</string>
    <string name="change_profile_data">Change</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="default_date">01 January 2002</string>
    <string name="goals">Goals</string>
    <string name="default_goals">This is my goals</string>
    <string name="favorite_book_category">Favorite Book Category</string>
    <string name="default_book_name">Book Name</string>
    <string name="fav_book">Favorite Book</string>
    <string name="fav_author">Favorite Author</string>
    <string name="default_author">Author Name</string>
    <string name="favorite_exercise_category">Favorite Exercise Category</string>
    <string name="favorite_exercise">Favorite Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="my_statistic">My Statistic</string>
    <string name="my_schedule">My Schedule</string>
    <string name="default_average_day">0 hours 0 minutes</string>
    <string name="today_routines">Today routines</string>
    <string name="today_average">Today Average</string>
    <string name="this_week_routines">This week routines</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirmation_password">Confirmation Password</string>
    <string name="save">Save</string>
    <string name="fill_your_personal_data">Fill Your Personal Data</string>
    <string name="describe_your_goals">Describe Your Goals</string>
    <string name="default_time">00 : 00</string>
    <string name="watch_tutorial">Watch Tutorial</string>
    <string name="finish_routine">Finish Routine</string>
    <string name="pick_schedule">Pick Schedule</string>
    <string name="routine_type">Routine Type</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="detail">Detail</string>
    <string name="pages">Pages</string>
    <string name="author">Author</string>
    <string name="rating">Rating</string>
    <string name="default_rating_book">%s / 10</string>
    <string name="description">Description</string>
    <string name="book_description">Book Description</string>
    <string name="start_this_routine">Start This Routine</string>
    <string name="default_pages">0 pages</string>
    <string name="average_duration">Optimal Duration</string>
    <string name="default_duration">%s minutes</string>
    <string name="add_routine">Add Routine</string>
    <string name="wrong_email_format">Wrong email format</string>
    <string name="wrong_password_format">Password length must at least 8 character </string>
    <string name="fill_field">Please fill every field</string>
    <string name="time_data">We recommend you to do your morning routines around 04.00 – 10.00 AM</string>

    <string name="incorrect_time">Please set your routine time correctly and still in the morning</string>
    <string name="wrong_credential">Wrong email or password</string>
    <string name="register_success">Register success</string>
    <string name="password_not_match">Password is not match</string>
    <string name="register_failed">Register failed</string>
    <string name="are_you_sure">Are you sure want to</string>
    <string name="dialog_logout">logout</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="question_mark">\?</string>
    <string name="morning_routines">morning routines</string>
    <string name="continue_your">Continue your</string>
    <string name="continue_routine">Hey, let’s continue your morning routines for more productive and healthy life</string>
    <string name="update_routine">Update Routine</string>
    <string name="delete_routine">Delete Routine</string>
    <string name="default_notes">This is my notes</string>
    <string name="default_avg_duration">0 minutes - 0 minutes</string>
    <string name="default_description">This is my description</string>
    <string name="notes">Notes</string>
    <string name="retry">Reload</string>
    <string name="failed_load_data">Failed to load data</string>
    <string name="routine_image">Routine Image</string>
    <string name="exercise_description">Exercise Description</string>
    <string name="post_schedule_success">New routine schedule is added</string>
    <string name="post_schedule_failed">New routine is failed to be added</string>
    <string name="book_preferences">Book Preferences</string>
    <string name="exercise_preferences">Exercise Preferences</string>
    <string name="text_book_preferences">This will help us to recommend you suitable books for you morning routine</string>
    <string name="text_exercise_preferences">This will help us to recommend you suitable exercise for you morning routine</string>
    <string name="tell_us_your">Tell Us Your</string>
    <string name="book">Book</string>
    <string name="preferences">Preferences</string>
    <string name="name_you_favorite_book">Name You Favorite Book (Only One)</string>
    <string name="workout_duration">Workout Duration</string>
    <string name="name_your_favorite_exercise">Favorite Exercise</string>
    <string name="release_date">Release Date</string>
    <string name="default_release_date">2000</string>
    <string name="location">Location</string>
    <string name="default_location">Indoor</string>
    <string name="equipment">Equipment</string>
    <string name="there_is_no_schedule_in_this_day">There is no schedule in this day</string>
    <string name="subscribe_custom_routine">Please subscribe to add you own routine</string>
    <string name="subscribe_custom_routine_explaination">You will be able to add your own custom routine according your needs</string>
    <string name="finish_your">Finish your</string>
    <string name="we_recommend">Hey, we recommend you to finish your morning routines according to your schedule which may improve your discipline</string>
    <string name="congrats_on_finishing">Congrats on finishing</string>
    <string name="marks">!</string>
    <string name="keep_up">Keep up your consistency and you will be more healthy and productive</string>
    <string name="back_to_home">Back To Home</string>
    <string name="your_recom">Your Recommendations</string>
    <string name="summary_harry_pother"><![CDATA[The story follows the mysterious deaths of the Riddle family, the discovery of Voldemort\'s return, Harry\'s involvement in the Triwizard Tournament, the revelation of Barty Crouch Jr. as the imposter, and the denial of Voldemort\'s return by the Ministry of Magic, culminating in Harry\'s return to the Dursleys for the summer.]]></string>
    <string name="harry_poter">Harry Potter and the Goblet of Fire</string>
    <string name="fill_your_book_preferences">Fill Your Book Preferences</string>
    <string name="fill_your_exercise_preferences">Fill Your Exercise Preferences</string>
    <string name="total_routine">Total routine</string>
    <string name="subscription_feature_is_coming_soon">Subscription feature is coming soon!</string>
    <string name="with_subscription_moru_will_provide_you_with_a_lot_of_new_features_for_your_morning_routines">With subscription, Moru will provide you with a lot of new features for your morning routines</string>

</resources>