<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/scheduleFragment"
        android:icon="@drawable/ic_calendar_month_24"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/routinesFragment"
        android:icon="@drawable/ic_accessibility_new_24"
        android:title="@string/title_routines" />

    <item
        android:id="@+id/statisticFragment"
        android:icon="@drawable/ic_bar_chart_24"
        android:title="@string/title_stat" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_person_24"
        android:title="@string/title_profile" />


</menu>