<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fill.FillBookPrefActivity">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24" />


    <LinearLayout
        android:id="@+id/container_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="85dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_no_acc"
            style="@style/textStyleSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:text="@string/tell_us_your"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/textStyleSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book"
            android:textColor="@color/orange"
            android:textSize="32sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_register2"
        style="@style/textStyleSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/preferences"
        android:textColor="@color/orange"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_register" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/text_book_preferences"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register2" />

    <EditText
        android:id="@+id/ed_name"
        style="@style/textStyleMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_text_field_bg"
        android:drawableEnd="@drawable/ic_arrow_drop_down_24"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/favorite_book_category"
        android:inputType="text"
        android:padding="16dp"
        android:textSize="14sp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register2" />

    <EditText
        android:id="@+id/ed_birth"
        style="@style/textStyleMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_text_field_bg"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/name_you_favorite_book"
        android:inputType="text"
        android:padding="16dp"
        android:textSize="14sp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_name" />


    <EditText
        android:id="@+id/ed_descgoals"
        style="@style/textStyleMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custom_text_field_bg"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/fav_author"
        android:inputType="text"
        android:textSize="14sp"
        android:padding="16dp"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_birth" />

    <Button
        android:id="@+id/btn_next"
        style="@style/buttonTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/custom_rounded_btn_bg"
        android:elevation="0dp"
        android:padding="8dp"
        android:text="@string/next"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_descgoals" />

</androidx.constraintlayout.widget.ConstraintLayout>